@@ -5,7 +5,6 @@ import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
 import org.sopt.app.application.auth.PlaygroundAuthInfo;
-import org.sopt.app.application.auth.PlaygroundAuthInfo.PlaygroundProfileWithId;
 import org.sopt.app.application.user.UserInfo.PokeProfile;
 import org.sopt.app.application.user.UserInfo.UserProfile;
 import org.sopt.app.common.exception.UnauthorizedException;
@@ -15,6 +14,8 @@ import org.sopt.app.interfaces.postgres.UserRepository;
 import org.sopt.app.presentation.auth.AppAuthRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.util.stream.Collectors;
 
 
 @Service
@@ -91,9 +92,20 @@ public class UserService {
         userRepository.save(newUser);
     }
 
-    public List<UserInfo.UserProfile> getUserProfilesByPlaygroundIds(List<Long> playgroundIds) {
+    @Transactional(readOnly = true)
+    public UserProfile getUserProfile(Long userId) {
+        val user = userRepository.findUserById(userId)
+                .orElseThrow(() -> new UnauthorizedException(ErrorCode.USER_NOT_FOUND.getMessage()));
+        return UserProfile.builder()
+                        .userId(user.getId())
+                        .name(user.getUsername())
+                        .playgroundId(user.getPlaygroundId())
+                        .build();
+    }
+
+    public List<UserProfile> getUserProfilesByPlaygroundIds(List<Long> playgroundIds) {
         return userRepository.findAllByPlaygroundIdIn(playgroundIds).stream().map(
-            u -> UserInfo.UserProfile.builder()
+            u -> UserProfile.builder()
                 .userId(u.getId())
                 .name(u.getUsername())
                 .playgroundId(u.getPlaygroundId())
@@ -103,37 +115,35 @@ public class UserService {
 
     public List<UserProfile> getUserProfileByUserId(List<Long> userId) {
         return userRepository.findAllByIdIn(userId).stream().map(
-            u -> UserInfo.UserProfile.builder()
+            u -> UserProfile.builder()
                 .userId(u.getId())
                 .name(u.getUsername())
                 .playgroundId(u.getPlaygroundId())
                 .build()
-        ).toList();
+        ).collect(Collectors.toList());
     }
 
     public List<PokeProfile> combinePokeProfileList(
-        List<UserProfile> userProfiles, List<PlaygroundProfileWithId> playgroundProfiles
+        List<UserProfile> userProfiles, List<PlaygroundAuthInfo.MemberProfile> playgroundProfiles
     ) {
         return userProfiles.stream().map(userProfile -> {
             val playgroundProfile = playgroundProfiles.stream()
                 .filter(profile -> profile.getId().equals(userProfile.getPlaygroundId()))
                 .findFirst()
                 .orElseThrow(() -> new RuntimeException("플레이그라운드 프로필이 없습니다."));
-            val generation = playgroundProfile.getActivities().get(0).getCardinalActivities().get(0)
-                .getGeneration();
-            val part = playgroundProfile.getActivities().get(0).getCardinalActivities().get(0)
-                .getPart();
+            val generation = playgroundProfile.getActivities().get(0).getGeneration();
+            val part = playgroundProfile.getActivities().get(0).getPart();
             return PokeProfile.builder()
                 .userId(userProfile.getUserId())
                 .profileImage(playgroundProfile.getProfileImage())
                 .name(userProfile.getName())
-                .generation(generation)
+                .generation(Long.parseLong(generation))
                 .part(part)
                 .isAlreadyPoked(false)
                 .build();
         }).toList();
     }
-    public List<UserInfo.UserProfile> findRandomFriendsOfFriends(Long userId, Long friendIds, int limitNum) {
+    public List<UserProfile> findRandomFriendsOfFriends(Long userId, Long friendIds, int limitNum) {
         val users = userRepository.findRandomFriendsOfFriends(userId, friendIds, limitNum);
         return users.stream().map(
             u -> UserProfile.builder()
